--- a/css/templatemo_style.css
+++ b/css/templatemo_style.css
@@ -230,9 +230,26 @@ h2.welcome-title {
     animation-delay: 0.1s;
 }
 
+h3.intro {
+    text-transform: none;
+    text-align: left;
+    margin: 20px 0 0 20px;
+    font-weight: lighter;
+    color: #fff;
+}
+
 @media screen and (max-width: 992px) {
     h2.welcome-title {
         font-size: 36px;
+    }
+
+    h3.intro {
+        text-align: center;
+        margin: 30px 0 0 0;
+    }
+
+    .list-icons {
+        text-align: center;
     }
 }
 
@@ -345,7 +362,7 @@ h2.welcome-title {
 
 @media (hover: none) {
     .project-item .overlay {
-        background: linear-gradient(0deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.4) 100%);
+        background: linear-gradient(0deg, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
         -moz-transform: rotate(0);
         -ms-transform: rotate(0);
         -o-transform: rotate(0);
@@ -533,9 +550,27 @@ span.offer-right {
 }
 
 .offer-2 {
+    -moz-animation-delay: 1.2s;
+    -webkit-animation-delay: 1.2s;
+    animation-delay: 1.2s;
+}
+
+.offer-3 {
     -moz-animation-delay: 1.4s;
     -webkit-animation-delay: 1.4s;
     animation-delay: 1.4s;
+}
+
+.offer-4 {
+    -moz-animation-delay: 1.6s;
+    -webkit-animation-delay: 1.6s;
+    animation-delay: 1.6s;
+}
+
+.offer-5 {
+    -moz-animation-delay: 1.8s;
+    -webkit-animation-delay: 1.8s;
+    animation-delay: 1.8s;
 }
 
 .projects-header {
